# semantic-transformers

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: 1_getting-started.md  2_adding-a-parser.md  3_quickstart-mapping.ipynb  adding-a-parser.md  getting-started.md  quickstart-mapping.ipynb
parsers/characterization/tensile-test/zwick/: README.md  column_mapping.json  compatibility.yaml  extractor.py  zwick_parser.py
scripts/: run_notebooks.sh
src/semantic_transformers/: __init__.py  extractor.py  parser.py  quick_mapper.py  transformer.py
src/semantic_transformers/parsers/: __init__.py
src/semantic_transformers/parsers/characterization/: __init__.py
src/semantic_transformers/parsers/characterization/tensile_test/: __init__.py
src/semantic_transformers/parsers/characterization/tensile_test/testxpert_iii/: CHANGELOG.md  README.md  __init__.py  parser.py
src/semantic_transformers/parsers/characterization/tensile_test/testxpert_iii/de/: __init__.py  column_mapping.json
src/semantic_transformers/parsers/characterization/tensile_test/zwick/: CHANGELOG.md  README.md  __init__.py  zwick_parser.py
tests/: conftest.py  test_quick_mapper.py  test_transformer.py
tests/data/: DX56_D_FZ2_WR00_43.TXT
tests/parsers/characterization/tensile-test/zwick/: test_zwick.py
tests/parsers/characterization/tensile_test/testxpert_iii/de/: test_testxpert_iii.py
tests/parsers/characterization/tensile_test/zwick/: test_zwick.py
