[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-transformers"
version = "0.1.0"
description = "Machine-file extractors and transformers for semantic schema pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Semantic Dataspace contributors" },
]
keywords = [
    "materials science",
    "ontology",
    "linked data",
    "rdf",
    "etl",
    "parsers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas",
    "rdflib",
    "pyyaml",
    "jsonata-python",
    "jsonschema",
]

[project.optional-dependencies]
excel = ["openpyxl"]
dev   = ["pytest", "nbmake"]

[project.urls]
Homepage = "https://github.com/Semantic-Dataspace/semantic-transformers"
Repository = "https://github.com/Semantic-Dataspace/semantic-transformers"
"Bug Tracker" = "https://github.com/Semantic-Dataspace/semantic-transformers/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:rdflib",
]
